# fde_homomorphic

./: Cargo.toml  LICENSE  README.md  client_out.txt  data.txt  eval_prot1.sh  eval_prot2.sh  graph_plotter.py  hash.txt  prot1_output.txt  prot2_output.txt  run_prot1.sh  run_prot2.sh  runs_prot1.sh  sc_out.txt  script_eval_prot2.sh  server_out.txt
src/: commitment.rs  lib.rs  main.rs  prot_utils.rs
src/homomorphic_functions/: boolean_ops256.rs  boolean_ops64.rs  encryption.rs  mod.rs  new_trivium.rs  padding.rs  sha3_256_function.rs
src/static_deque/: mod.rs  static_deque.rs
