[package]
name = "fde_protocols"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.32"
tfhe = { version = "*", features = ["boolean", "shortint", "integer"] }
rayon = "1.10.0"
bincode = "1.3.3"
sha3 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
sha2 = "0.11.0-rc.0"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "setup"
path = "src/bin/setup.rs"

[[bin]]
name = "client1"
path = "src/bin/client1.rs"

[[bin]]
name = "server1"
path = "src/bin/server1.rs"

[[bin]]
name = "smart_contract1"
path = "src/bin/smart_contract1.rs"

[[bin]]
name = "client2"
path = "src/bin/client2.rs"

[[bin]]
name = "server2"
path = "src/bin/server2.rs"

[[bin]]
name = "smart_contract2"
path = "src/bin/smart_contract2.rs"
